kubernetes-fundamentals-2/03-ingress/assets/resources/jwilder-clusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: jwilder-service
spec:
  selector:
    app: jwilder
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
