kubernetes-fundamentals-2/03-ingress/assets/resources/tutum-clusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: tutum-service
spec:
  selector:
    app: tutum
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
